# mutils

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: README.md
examples/fhandler/: fhandler-example.cpp  fhandler-example.md
examples/logger/: logger-example-stdout.cpp  logger-example-stdout.md  logger-example-tofile.cpp  logger-example-tofile.md
misc/: changelog.md  faq.md  todo.md
src/: mutils-fhandler.cpp  mutils-logger.cpp
src/include/: mutils-fhandler.h  mutils-logger.h
